--- a/index.html
+++ b/index.html
@@ -28,6 +28,12 @@
     </div>
   </nav>
 
+  <!-- Banner Image -->
+  <section class="banner">
+    <img src="https://images.pexels.com/photos/1008155/pexels-photo-1008155.jpeg" 
+         alt="Travel Banner" class="img-fluid w-100">
+  </section>
+
   <!-- Hero Section -->
   <section class="text-white text-center p-5 hero-section">
     <div class="container">
